ixed styling issues for header on smaller screen sizes and also checked all details throughout screen sizes to keep layout the same throughout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   display: grid;
+  background-color: white;
 }
 
 header {
@@ -620,7 +621,8 @@ header {
   }
 
   #mainVideo {
-    padding-left: 15%;
+    padding-left: 10%;
+    padding-top: 12%;
   }
 
   br {
@@ -874,6 +876,43 @@ header {
 
 }
 
+/* creating styles for ipad air landscape */
+
+@media screen and (max-width: 1180px){
+  #mainVideo{
+    width: 150%;
+    padding-top: 20%;
+  }
+
+  #info-section h3 {
+    font-size: 205%;
+  }
+
+  #mockup-image-section{
+    padding-top: 5%;
+  }
+}
+
+/* creating styles for ipad air portrait */
+
+@media screen and (max-width: 820px){
+  #info-section h3{
+    font-size: 135%;
+  }
+
+  #download-title{
+    padding-left: 11%;
+  }
+
+  #download-mainVideo{
+    padding-top: 10%;
+  }
+
+  #description-container p {
+    font-size: 110%;
+  }
+}
+
 /* creating a single styles for ipad portait */
 
 @media screen and (max-width: 1024px) {
@@ -918,6 +957,7 @@ header {
 
   #mainVideo{
     width: 80%;
+    padding-top: 5%;
   }
 
   #intro-text{
@@ -948,6 +988,10 @@ header {
     padding-top: 15%;
   }
 
+  #mockup-image-container img{
+    width: 90%;
+  }
+
   #contact-form{
     height: 100%;
   }
@@ -956,6 +1000,13 @@ header {
     width: 25%;
   }
 
+  #left-footer-section {
+    width: 25%;
+  }
+
+  #footer-nav-bar{
+    padding-right: 17.5%;
+  }
   
   /* about page adjustments */
 
@@ -1127,7 +1178,7 @@ header {
   }
 
   #mainVideo {
-    width: 150%;
+    width: 145%;
   }
 
 
@@ -1221,7 +1272,7 @@ header {
 
   #footer-nav {
     width: 100%;
-    padding-left: 20%;
+    padding-left: 5%;
   }
 
   #footer-nav a {
@@ -1400,9 +1451,37 @@ header {
   .header-button{
     display: none;
   }
+
+  #mainVideo{
+    width: 145%;
+  }
 }
 
-@media screen and (min-width: 2250px){
+@media screen and (max-width: 360px){
+  header{
+    padding-right: 15%;
+    width: 100%;
+    justify-content: space-evenly;
+  }
+
+  #header-nav{
+    width: 250%;
+  }
+
+  .header-button{
+    display: none;
+  }
+
+  #main-section-buttons a{
+    font-size: 100%;
+  }
+
+  #mainVideo{
+    width: 145%;
+  }
+}
+
+@media screen and (min-width: 2000px){
 
   /*styles for homepage on 27inch screen */
 
@@ -1425,7 +1504,6 @@ header {
     height: 75%;
     padding-right: 20%;
     padding-left: 0%;
-    padding-top: 4%;
   }
   #info-section{
     padding-top: 5%;
@@ -1469,7 +1547,8 @@ header {
   }
   #download-title{
     font-size: 450%;
-    padding-right: 21%
+    padding-right: 21%;
+    padding-top: 10%;
   }
   #download-video{
     width: 55%;
